feat : Enhance dashboard, add best seller widget